# cmsketch

./: CMakeLists.txt  README.md
report/: report.md
src/: cmsketch.cpp  cmsketch.hpp  exporter.cpp  exporter.hpp  main.cpp  utils.cpp  utils.hpp
visualization/: exp1.ipynb  exp2.ipynb  exp3.ipynb  exp4.ipynb  exp5.ipynb  exp6.ipynb  exp7.ipynb  exp8.ipynb
visualization/data/: results_16*4_winequality-white.csv  results_256*10_winequality-white.csv  results_256*1_winequality-white.csv  results_256*5_winequality-white.csv  results_32*2_winequality-white.csv  results_512*10_winequality-white.csv  results_512*5_winequality-white.csv  results_64*1_winequality-white.csv
